// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Modal /> should render the modal open true 1`] = `
.c4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 40;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  opacity: 0.8;
  background-color: #575453;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  z-index: 2;
  font-weight: 400;
  color: #575453;
  background-color: #ffffff;
  padding: 2rem 2rem 1.6rem;
  font-size: 1.6rem;
  line-height: 1.8rem;
  width: 100%;
  height: 100%;
  -webkit-animation: bOuwtO 0.3s ease-in-out;
  animation: bOuwtO 0.3s ease-in-out;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: auto 0 0;
  gap: 1.6rem;
}

.c3 {
  display: inline;
  position: absolute;
  border: none;
  cursor: pointer;
  background-color: #0000;
  top: 1.6rem;
  right: 1.6rem;
}

@media (min-width:1170px) {
  .c2 {
    -webkit-animation: none;
    animation: none;
    height: auto;
    border-radius: 0.6rem;
    min-height: calc(3.2rem * 5);
    width: 55.7rem;
  }
}

@media (min-width:1170px) {
  .c5 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

<div
  class="c0"
  open=""
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <button
      class="c3"
    >
      <svg
        aria-hidden="true"
        class="c4"
        color="gray"
        fill="currentColor"
        focusable="false"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        />
      </svg>
    </button>
    Modal
    <div
      class="c5"
    />
  </div>
</div>
`;

exports[`<Modal /> should render the modal with button approve 1`] = `
.c6 {
  cursor: pointer;
  white-space: nowrap;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  border-radius: 0.8rem;
  color: #ffffff;
  background-color: #2E50D4;
  font-weight: 700;
  border: 0.2rem solid #0000;
  height: 4rem;
  min-width: 7.5rem;
  font-size: 1.4rem;
  line-height: 1.8rem;
  padding: 0 1.2rem;
}

.c6:disabled {
  cursor: not-allowed;
  color: #DAD2D0;
  background-color: #F4F2F1;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 40;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  opacity: 0.8;
  background-color: #575453;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  z-index: 2;
  font-weight: 400;
  color: #575453;
  background-color: #ffffff;
  padding: 2rem 2rem 1.6rem;
  font-size: 1.6rem;
  line-height: 1.8rem;
  width: 100%;
  height: 100%;
  -webkit-animation: bOuwtO 0.3s ease-in-out;
  animation: bOuwtO 0.3s ease-in-out;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: auto 0 0;
  gap: 1.6rem;
}

.c3 {
  display: inline;
  position: absolute;
  border: none;
  cursor: pointer;
  background-color: #0000;
  top: 1.6rem;
  right: 1.6rem;
}

@media (min-width:1170px) {
  .c2 {
    -webkit-animation: none;
    animation: none;
    height: auto;
    border-radius: 0.6rem;
    min-height: calc(3.2rem * 5);
    width: 55.7rem;
  }
}

@media (min-width:1170px) {
  .c5 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

<div
  class="c0"
  open=""
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <button
      class="c3"
    >
      <svg
        aria-hidden="true"
        class="c4"
        color="gray"
        fill="currentColor"
        focusable="false"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        />
      </svg>
    </button>
    Modal
    <div
      class="c5"
    >
      <button
        class="c6"
        color="white"
      >
        aprovar
      </button>
    </div>
  </div>
</div>
`;

exports[`<Modal /> should render the modal with button cancel 1`] = `
.c6 {
  cursor: pointer;
  white-space: nowrap;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  border-radius: 0.8rem;
  color: #DAD2D0;
  background-color: #0000;
  font-weight: 700;
  border: 0.2rem solid #0000;
  height: 4rem;
  min-width: 7.5rem;
  font-size: 1.4rem;
  line-height: 1.8rem;
  padding: 0 1.2rem;
}

.c6:disabled {
  cursor: not-allowed;
  color: #DAD2D0;
  background-color: #F4F2F1;
}

.c4 {
  display: inline-block;
  vertical-align: middle;
  overflow: hidden;
}

.c0 {
  position: fixed;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  z-index: 40;
}

.c1 {
  position: absolute;
  width: 100%;
  height: 100%;
  z-index: 1;
  opacity: 0.8;
  background-color: #575453;
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  z-index: 2;
  font-weight: 400;
  color: #575453;
  background-color: #ffffff;
  padding: 2rem 2rem 1.6rem;
  font-size: 1.6rem;
  line-height: 1.8rem;
  width: 100%;
  height: 100%;
  -webkit-animation: bOuwtO 0.3s ease-in-out;
  animation: bOuwtO 0.3s ease-in-out;
}

.c5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin: auto 0 0;
  gap: 1.6rem;
}

.c3 {
  display: inline;
  position: absolute;
  border: none;
  cursor: pointer;
  background-color: #0000;
  top: 1.6rem;
  right: 1.6rem;
}

@media (min-width:1170px) {
  .c2 {
    -webkit-animation: none;
    animation: none;
    height: auto;
    border-radius: 0.6rem;
    min-height: calc(3.2rem * 5);
    width: 55.7rem;
  }
}

@media (min-width:1170px) {
  .c5 {
    -webkit-box-pack: end;
    -webkit-justify-content: flex-end;
    -ms-flex-pack: end;
    justify-content: flex-end;
  }
}

<div
  class="c0"
  open=""
>
  <div
    class="c1"
  />
  <div
    class="c2"
  >
    <button
      class="c3"
    >
      <svg
        aria-hidden="true"
        class="c4"
        color="gray"
        fill="currentColor"
        focusable="false"
        height="16"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 6.41 17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z"
        />
      </svg>
    </button>
    Modal
    <div
      class="c5"
    >
      <button
        class="c6"
        color="gray"
      >
        cancelar
      </button>
    </div>
  </div>
</div>
`;
